Word Source Changes
Added favicon, prevented text selection, sourced words from JS array rather than manually created.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 <head>
     <title>Sentence Builder</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
 </head>
     <body>
         <div class="bank" ondrop="drop(event)" ondragover="allowDrop(event)">
             <div class="title">Word Bank</div>
-            <div id=1 class="word" draggable="true" ondragstart="drag(event)">Hello</div>
-            <div id=2 class="word" draggable="true" ondragstart="drag(event)">World</div>
-            <div id=3 class="word" draggable="true" ondragstart="drag(event)">Goodbye</div>
-            <div id=4 class="word" draggable="true" ondragstart="drag(event)">Welcome</div>
-            <div id=5 class="word" draggable="true" ondragstart="drag(event)">Thank you</div>
-            <div id=7 class="word" draggable="true" ondragstart="drag(event)">Blah</div> 
         </div>
 
         <div class="sentence" ondrop="drop(event)" ondragover="allowDrop(event)">
