JS and CSS tweaks
added hover event

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
     <body>
         <div class="bank" ondrop="drop(event)" ondragover="allowDrop(event)">
-            <div class="title">Word Bank</div>
+            <div class="title">Sight Words</div>
+            <img id=6 src="images/smile.png" draggable="true" ondragstart="drag(event)" width="100" height=auto>
         </div>
 
         <div class="sentence" ondrop="drop(event)" ondragover="allowDrop(event)">
             <div class="title">Sentence Builder</div>
         </div>
 
-        <div class="pics" ondrop="drop(event)" ondragover="allowDrop(event)">
-            <div class="title">Pictures</div>
-            <img id=6 src="smile.png" draggable="true" ondragstart="drag(event)" width="100" height=auto>
+        <div class="nouns" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="title">Nouns</div>
         </div>
 
 
