Added name form on landing page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <input type="text" id="search-box" placeholder="Type a word..">
                 <ul id="search-results"></ul>
                 <button class="button" id="confirm-button">Add</button>
+                <h1>Welcome, <span id="userNamePlaceholder"></span>!</h1>
             </div>
 
 
