--- a/start.html
+++ b/start.html
@@ -9,11 +9,13 @@
     <link rel="manifest" href="images/favicon/site.webmanifest">
 </head>
     <body>
-        <h1 class="title">Sentence Builder</h1>
+        <h1 class="title">Kinder Builder</h1>
 
-        <a class="play" href="index.html">
-            <button class="button">Play!</button>
-        </a>
+        <input type="text" class="name" id="name" placeholder="Type your name">
+
+        <button class="button" id="play" disabled>Play!</button>
+
+        <script src="js/start.js"></script>
     </body>
 
 
