--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sentence Builder</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon/site.webmanifest">
+    <link rel="stylesheet" href="src/index.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="src/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="src/assets/favicon/site.webmanifest">
 </head>
     <body>
         <div class="sight">
@@ -20,16 +20,15 @@
             <div class="title">Sentence Builder</div>
 
             <div class="search-container">
+                <h1>Welcome, <span id="userNamePlaceholder"></span>!</h1>
                 <input type="text" id="search-box" placeholder="Type a word..">
                 <ul id="search-results"></ul>
                 <button class="button" id="confirm-button">Add</button>
-                <h1>Welcome, <span id="userNamePlaceholder"></span>!</h1>
             </div>
-
 
             <div id="sentence-text"></div>
 
-            <button class="button" id="readSentence" onclick="alertTest()">Read sentence</button>
+            <button class="button" id="readSentence">Read sentence</button>
 
             <div class="punc-container">
                 <div class="word" id="period">.</div>
@@ -37,7 +36,7 @@
                 <div class="word" id="exclamation">!</div>
             </div>
 
-            <img src="images/trash.png" class="trashcan" onclick="clearSentenceBox()"></img>
+            <img src="src/assets/trash.png" class="trashcan" id="trashcan"></img>
         </div>
 
         <div class="nouns">
@@ -45,7 +44,7 @@
         </div>
 
 
-        <script src="js/main.js"></script> 
+        <script type="module" src="/src/main.jsx"></script>
 
     </body>
 </html>
