--- a/start.html
+++ b/start.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Sentence Builder</title>
-    <link rel="stylesheet" href="css/start-style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon/site.webmanifest">
+    <link rel="stylesheet" href="src/start-style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="src/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="src/assets/favicon/site.webmanifest">
 </head>
     <body>
         <h1 class="title">Kinder Builder</h1>
@@ -15,7 +15,7 @@
 
         <button class="button" id="play" disabled>Play!</button>
 
-        <script src="js/start.js"></script>
+        <script src="src/start.jsx"></script>
     </body>
 
 
