Lots of Sortable work, backend started
Sorting partially works. Can't use same word twice (won't let you sort). Dragging also added to the word lists but can't drop yet. Database created and works good!

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+    Not sure why it makes me put index.html in root directory, but whatever.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
